# fastx

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: common.cpp  common.hpp  fastx.cpp  fastx_head.cpp  fastx_head.hpp  fastx_sample.cpp  fastx_sample.hpp  fastx_seq.hpp  fastx_split.cpp  fastx_split.hpp  fastx_subseq.cpp  fastx_subseq.hpp  kseq.h  kseq_utils.cpp  kseq_utils.hpp  seq_reader.hpp  test_seq_reader.cpp  utils.cpp  utils.hpp  version.hpp  version.hpp.in
